# projeto-demanda-urbi

./: README.md  mix_trips_trips_20240401.parquet  pyproject.toml
amostra/: .~lock.shiftAccess.xlsx#  families.xlsx  lines.xlsx  products.xlsx  shiftAccess.xlsx  shifts.xlsx  shiftstypes.xlsx  systems.xlsx  trips.xlsx  tripsAnomalies.xlsx
