[tool.poetry]
name = "tdmax-demanda-urbi"
version = "0.1.0"
description = ""
authors = ["Marcelo <borgesmp@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
openpyxl = "^3.1.5"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
